<resources>
    <string name="app_name">Ping Pong X</string>
    <string name="start_game_label">Começar partida</string>
    <string name="fill_form_label">Preencha os campos</string>
    <string name="developed_by_label">Desenvolvido por César Rodrigues</string>
    <string name="start_game_button">Começar</string>
    <string name="score_default">0</string>
    <string name="versus_label">x</string>
    <string name="home_label">casa</string>
    <string name="away_label">visitante</string>
    <string name="score_label">ponto</string>
    <string name="end_game_button">Terminar partida</string>
    <string name="rematch_button">revanche</string>
    <string name="hint_home_player">Nome do jogador da Casa</string>
    <string name="hint_away_player">Nome do jogador Visitante</string>
    <string name="draw_label">Empate</string>

    <string name="winner_placeholder">Parabéns jogador %1$s, você venceu</string>

    <string name="message_to_share">O jogo entre %1$s e %2$s terminou %3$d a %4$d</string>
    <string name="share_whatsapp">Compartilhar com o WhatsApp</string>
</resources>