<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainActivity">

    <TextView
        android:id="@+id/tvMainAppName"
        style="@style/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMainScoreHome"
        style="@style/home_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:paddingHorizontal="32dp"
        android:text="@string/score_default"
        android:textSize="80sp"
        app:layout_constraintEnd_toStartOf="@id/tvMainVersus"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMainAppName" />

    <TextView
        android:id="@+id/tvMainVersus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/versus_label"
        android:textSize="100sp"
        app:layout_constraintEnd_toStartOf="@id/tvMainScoreAway"
        app:layout_constraintStart_toEndOf="@id/tvMainScoreHome"
        app:layout_constraintTop_toTopOf="@id/tvMainScoreHome" />

    <TextView
        android:id="@+id/tvMainScoreAway"
        style="@style/away_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:paddingHorizontal="32dp"
        android:text="@string/score_default"
        android:textSize="80sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvMainVersus"
        app:layout_constraintTop_toTopOf="@id/tvMainScoreHome" />

    <TextView
        android:id="@+id/tvMainPlayerHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/home_label"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="@id/tvMainScoreHome"
        app:layout_constraintTop_toBottomOf="@id/tvMainScoreHome" />

    <TextView
        android:id="@+id/tvMainPlayerAway"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/away_label"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="@id/tvMainScoreAway"
        app:layout_constraintTop_toTopOf="@id/tvMainPlayerHome" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btMainScoreHome"
        style="@style/custom_button_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/score_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMainPlayerHome" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btMainScoreAway"
        style="@style/custom_button_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/score_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btMainScoreHome" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btMainEndGame"
        style="@style/custom_button.main_screen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="48dp"
        android:text="@string/end_game_button"
        app:layout_constraintEnd_toEndOf="@id/btMainScoreAway"
        app:layout_constraintStart_toStartOf="@id/btMainScoreHome"
        app:layout_constraintTop_toBottomOf="@id/btMainScoreHome" />

    <Button
        android:id="@+id/btMainRematch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/rematch_button"
        app:layout_constraintEnd_toEndOf="@id/btMainEndGame"
        app:layout_constraintStart_toStartOf="@id/btMainEndGame"
        app:layout_constraintTop_toBottomOf="@id/btMainEndGame" />

    <Button
        android:id="@+id/btMainShare"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/share_whatsapp"
        app:layout_constraintEnd_toEndOf="@id/btMainRematch"
        app:layout_constraintStart_toStartOf="@id/btMainRematch"
        app:layout_constraintTop_toBottomOf="@id/btMainRematch" />

</androidx.constraintlayout.widget.ConstraintLayout>