<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerActivity">

    <TextView
        android:id="@+id/tvPlayerAppName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPlayerStartGame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/start_game_label"
        app:layout_constraintEnd_toEndOf="@id/tvPlayerAppName"
        app:layout_constraintStart_toStartOf="@id/tvPlayerAppName"
        app:layout_constraintTop_toBottomOf="@id/tvPlayerAppName" />

    <TextView
        android:id="@+id/tvPlayerFillForm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/fill_form_label"
        app:layout_constraintEnd_toEndOf="@id/tvPlayerAppName"
        app:layout_constraintStart_toStartOf="@id/tvPlayerAppName"
        app:layout_constraintTop_toBottomOf="@id/tvPlayerStartGame" />

    <EditText
        android:id="@+id/etPlayerHome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:autofillHints="name"
        android:hint="@string/hint_home_player"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@id/tvPlayerFillForm"
        app:layout_constraintStart_toStartOf="@id/tvPlayerFillForm"
        app:layout_constraintTop_toBottomOf="@id/tvPlayerFillForm" />

    <EditText
        android:id="@+id/etPlayerAway"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints="name"
        android:hint="@string/hint_away_player"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@id/etPlayerHome"
        app:layout_constraintStart_toStartOf="@id/etPlayerHome"
        app:layout_constraintTop_toBottomOf="@id/etPlayerHome" />

    <TextView
        android:id="@+id/tvPlayerResultLastGame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/etPlayerAway"
        app:layout_constraintStart_toStartOf="@id/etPlayerAway"
        app:layout_constraintTop_toBottomOf="@id/etPlayerAway"
        tools:text="O jogo entre Batman e Robin terminou 7 a 1" />

    <Button
        android:id="@+id/btPlayerStartGame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/start_game_button"
        app:layout_constraintBottom_toTopOf="@id/tvPlayerDevelopedBy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvPlayerDevelopedBy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/developed_by_label"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>